# python-tmc5160

./: .flake8  README.md  pyproject.toml  setup.py  shell.nix
examples/: one_motor.py  two_motors.py
tests/: test_tmc5160.py
tmc5160/: __init__.py  driver.py  structs.py
